--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,45 @@
+@ARTICLE{Cioffi2020-lq,
+  title     = "Artificial intelligence and machine learning applications in
+               smart production: Progress, trends, and directions",
+  author    = "Cioffi, Raffaele and Travaglioni, Marta and Piscitelli,
+               Giuseppina and Petrillo, Antonella and De Felice, Fabio",
+  abstract  = "Adaptation and innovation are extremely important to the
+               manufacturing industry. This development should lead to
+               sustainable manufacturing using new technologies. To promote
+               sustainability, smart production requires global perspectives of
+               smart production application technology. In this regard, thanks
+               to intensive research efforts in the field of artificial
+               intelligence (AI), a number of AI-based techniques, such as
+               machine learning, have already been established in the industry
+               to achieve sustainable manufacturing. Thus, the aim of the
+               present research was to analyze, systematically, the scientific
+               literature relating to the application of artificial
+               intelligence and machine learning (ML) in industry. In fact,
+               with the introduction of the Industry 4.0, artificial
+               intelligence and machine learning are considered the driving
+               force of smart factory revolution. The purpose of this review
+               was to classify the literature, including publication year,
+               authors, scientific sector, country, institution, and keywords.
+               The analysis was done using the Web of Science and SCOPUS
+               database. Furthermore, UCINET and NVivo 12 software were used to
+               complete them. A literature review on ML and AI empirical
+               studies published in the last century was carried out to
+               highlight the evolution of the topic before and after Industry
+               4.0 introduction, from 1999 to now. Eighty-two articles were
+               reviewed and classified. A first interesting result is the
+               greater number of works published by the USA and the increasing
+               interest after the birth of Industry 4.0.",
+  journal   = "Sustainability",
+  publisher = "MDPI AG",
+  volume    =  12,
+  number    =  2,
+  pages     = "492",
+  month     =  jan,
+  year      =  2020,
+  copyright = "https://creativecommons.org/licenses/by/4.0/",
+  language  = "en"
+}
+
 @ARTICLE{Collier2024-ld,
   title     = "Data analyst competencies: A theory-driven investigation of
                industry requirements in the field of data analytics",
