--- a/statistics_machine_learning_expansion/statistics_machine_learning_expansion.ipynb
+++ b/statistics_machine_learning_expansion/statistics_machine_learning_expansion.ipynb
@@ -1185,7 +1185,7 @@
    "id": "09bbb18a-86da-494e-86e1-5d9288c44459",
    "metadata": {},
    "source": [
-    "This **application examples** shows how to compute the correlation matrix, the eigenvalues as well as the corresponding factor loadings for identifying the underlying factors:"
+    "This **application example** shows how to compute the correlation matrix, the eigenvalues as well as the corresponding factor loadings for identifying the underlying factors:"
    ]
   },
   {
